compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/completeFunctionArgumentsOfNestedCalls.kt
// FIR_IDENTICAL
package c

fun demo() {
    val bar = 51
    fun map(f : <!SYNTAX!><!SYNTAX!><!>fun<!>
    val foo = 3;
    bar <!NONE_APPLICABLE!>+<!> map { foo }
}